--- a/src/style/_typo.sass
+++ b/src/style/_typo.sass
@@ -1,6 +1,35 @@
+
+@font-face
+    font-family: 'Karla'
+    src: url('/fonts/karla-bold-webfont.woff2') format('woff2')
+    src: url('/fonts/karla-bold-webfont.woff') format('woff')
+    font-weight: bold
+    font-style: normal
+
+@font-face
+    font-family: 'karlabolditalic'
+    src: url('/fonts/karla-bolditalic-webfont.woff2') format('woff2')
+    src: url('/fonts/karla-bolditalic-webfont.woff') format('woff')
+    font-weight: bold
+    font-style: italic
+
+@font-face
+    font-family: 'Karla'
+    src: url('/fonts/karla-italic-webfont.woff2') format('woff2')
+    src: url('/fonts/karla-italic-webfont.woff') format('woff')
+    font-weight: normal
+    font-style: italic
+
+@font-face
+    font-family: 'Karla'
+    src: url('/fonts/karla-regular-webfont.woff2') format('woff2')
+    src: url('/fonts/karla-regular-webfont.woff') format('woff')
+    font-weight: normal
+    font-style: normal
+
 //Fluid typography
 
-$scale: 1.618
+$scale: 1.4
 
 =h6
     font-size: 1rem / $scale
