--- a/src/style/reset.sass
+++ b/src/style/reset.sass
@@ -26,7 +26,7 @@ body
     width: 100%
     min-height: 100vh
     height: 100%
-    font-family: "Arial"
+    font-family: "Karla"
     -moz-osx-font-smoothing: grayscale
     -webkit-font-smoothing: antialiased
     color: $primary
