--- a/src/style/_mixins.sass
+++ b/src/style/_mixins.sass
@@ -41,13 +41,13 @@
 
 // 2. Padding
 =pt($pt)
-    margin-top: $pt
+    padding-top: $pt
 =pb($pb)
-    margin-bottom: $pb
+    padding-bottom: $pb
 =pl($pl)
-    margin-left: $pl
+    padding-left: $pl
 =pr($pr)
-    margin-right: $pr
+    padding-right: $pr
 
 =px($pl, $pr: false)
     padding-left: $pl
@@ -91,7 +91,7 @@
 =btn($bg, $txt, $rad: 50%, $border: $bg)
     border-radius: $rad // ou s/m/l-radius
     background: $bg
-    border: 1px solid $border
+    border: 1.2px solid $border
     color: $txt
     transition: all 0.4s ease
 
