--- a/src/style/global.sass
+++ b/src/style/global.sass
@@ -93,14 +93,15 @@ button
 	&:hover
 		+deep-shadow
 
-	// outlined-btn
+	/* -- PRIMARY -- */
+	// outlined
 	&.p-outlined-btn
 		+btn(transparent, $primary, $m-rad, $primary)
 		&:hover
 			+btn($primary, $white, $m-rad, $primary)
 		&.focus, &.active
 			+btn($p-light, $white, $m-rad, $primary)
-
+	// filled
 	&.p-filled-btn
 		+btn($primary, $white, $m-rad)
 		&:hover
@@ -109,3 +110,39 @@ button
 			+btn($p-light, $white, $m-rad)
 		&.disabled
 			+btn($p-transparent, $white, $m-rad)
+
+	/* -- SECONDARY -- */
+	// outlined
+	&.s-outlined-btn
+		+btn(transparent, $secondary, $m-rad, $secondary)
+		&:hover
+			+btn($secondary, $white, $m-rad, $secondary)
+		&.focus, &.active
+			+btn($s-light, $white, $m-rad, $secondary)
+	// filled
+	&.s-filled-btn
+		+btn($secondary, $white, $m-rad)
+		&:hover
+			+btn($s-dark, $white, $m-rad)
+		&.focus, &.active
+			+btn($s-light, $white, $m-rad)
+		&.disabled
+			+btn($s-transparent, $white, $m-rad)
+
+	/* -- TERTIARY -- */
+	// outlined
+	&.t-outlined-btn
+		+btn(transparent, $tertiary, $m-rad, $tertiary)
+		&:hover
+			+btn($tertiary, $white, $m-rad, $tertiary)
+		&.focus, &.active
+			+btn($t-light, $white, $m-rad, $tertiary)
+	// filled
+	&.t-filled-btn
+		+btn($tertiary, $white, $m-rad)
+		&:hover
+			+btn($t-dark, $white, $m-rad)
+		&.focus, &.active
+			+btn($t-light, $white, $m-rad)
+		&.disabled
+			+btn($t-transparent, $white, $m-rad)
