--- a/src/style/_mixins.sass
+++ b/src/style/_mixins.sass
@@ -110,17 +110,17 @@
 /* ---- OMBRES ---- */
 
 // TODO: adapter les pixels au projet
-=light-shadow($color: $light-grey)
+=light-shadow($color: $grey-l)
     box-shadow: 1px 1px 2px $color
     -moz-box-shadow: 1px 1px 2px $color
     -webkit-box-shadow: 1px 1px 2px $color
 
-=shadow($color: $light-grey)
+=shadow($color: $grey-l)
     box-shadow: 2px 2px 4px $color
     -moz-box-shadow: 2px 2px 4px $color
     -webkit-box-shadow: 2px 2px 4px $color
 
-=deep-shadow($color: $light-grey)
+=deep-shadow($color: $grey-l)
     box-shadow: 4px 4px 8px $color
     -moz-box-shadow: 4px 4px 8px $color
     -webkit-box-shadow: 4px 4px 8px $color
