--- a/src/style/_theme.sass
+++ b/src/style/_theme.sass
@@ -12,20 +12,22 @@ $l-rad: 12px
 /* ---- //TODO: Adapter au thème du projet ---- */
 
 /* Nuancier des couleurs du thème */
-$p-dark: #052AE4
-$primary: #4D69FB
-$p-light: #7289FC
-$p-transparent: #4D69FB66
+$p-d: #052AE4
+$prim: #4D69FB
+$p-l: #7289FC
+$p-trans: #4D69FB66
 
-$s-dark: #FAD107
-$secondary: #FBDE4B
-$s-light: #FCE572
-$s-transparent: #FBDE4B66
+$s-d: #FAD107
+$sec: #FBDE4B
+$s-l: #FCE572
+$s-trans: #FBDE4B66
 
-$t-dark: #FA2F07
-$tertiary: #FB684B
-$t-light: #FC8972
-$t-transparent: #FB684B66
+$t-d: #FA2F07
+$ter: #FB684B
+$t-l: #FC8972
+$t-trans: #FB684B66
+
+$brown-l: #E6D2AF
 
 /* Couleurs des notifications du thème */
 $success: #03A01D
@@ -35,12 +37,13 @@ $info: #031DA0
 
 // Nuances de gris
 $black: #000000
-$black-tranparent: #00000040 // transparence 0.25
-$darker-grey: #2A2A2A
-$dark-grey: #7E7E7E
+$marine: #001229
+$black-trans: #00000040 // transparence 0.25
+$grey-xd: #2A2A2A
+$grey-d: #7E7E7E
 $grey: #C5C5C5
-$light-grey: #D9D9D9
-$lighter-grey: #EAEAEA
+$grey-l: #D9D9D9
+$grey-xl: #EAEAEA
 $white: #FFFFFF
 
 // Transparence pour Hexa
