--- a/src/style/reset.sass
+++ b/src/style/reset.sass
@@ -29,7 +29,7 @@ body
     font-family: "Karla"
     -moz-osx-font-smoothing: grayscale
     -webkit-font-smoothing: antialiased
-    color: $primary
+    color: $prim
 
 button,
 input,
