--- a/src/style/_typo.sass
+++ b/src/style/_typo.sass
@@ -7,7 +7,7 @@
     font-style: normal
 
 @font-face
-    font-family: 'karlabolditalic'
+    font-family: 'Karla'
     src: url('/fonts/karla-bolditalic-webfont.woff2') format('woff2')
     src: url('/fonts/karla-bolditalic-webfont.woff') format('woff')
     font-weight: bold
