--- a/src/style/reset.sass
+++ b/src/style/reset.sass
@@ -36,6 +36,8 @@ input,
 optgroup,
 select,
 textarea
+    background-color: transparent
+    border: none
     font-family: inherit
     font-size: 100%
     line-height: 1.15
