easter egg added

--- a/src/style/_mixins.sass
+++ b/src/style/_mixins.sass
@@ -112,17 +112,17 @@
 /* ---- OMBRES ---- */
 
 // TODO: adapter les pixels au projet
-=light-shadow($color: $grey-l)
+=light-shadow($color: $grey)
     box-shadow: 1px 1px 2px $color
     -moz-box-shadow: 1px 1px 2px $color
     -webkit-box-shadow: 1px 1px 2px $color
 
-=shadow($color: $grey-l)
+=shadow($color: $grey-d)
     box-shadow: 2px 2px 4px $color
     -moz-box-shadow: 2px 2px 4px $color
     -webkit-box-shadow: 2px 2px 4px $color
 
-=deep-shadow($color: $grey-l)
+=deep-shadow($color: $grey-xd)
     box-shadow: 4px 4px 8px $color
     -moz-box-shadow: 4px 4px 8px $color
     -webkit-box-shadow: 4px 4px 8px $color
