--- a/src/style/global.sass
+++ b/src/style/global.sass
@@ -74,6 +74,17 @@ i
 		&::before
 			content: "✕"
 
+// ┬  ┬┌┐┌┬┌─┌─┐
+// │  ││││├┴┐└─┐
+// ┴─┘┴┘└┘┴ ┴└─┘
+
+a
+	+link-alike
+
+	&.notif-link
+		font-weight: bold
+		text-decoration: underline
+
 // ┌┐ ┌─┐┬ ┬┌┬┐┌─┐┌┐┌┌─┐
 // ├┴┐│ ││ │ │ │ ││││└─┐
 // └─┘└─┘└─┘ ┴ └─┘┘└┘└─┘
