SEO improvements + error page

--- a/src/style/global.sass
+++ b/src/style/global.sass
@@ -106,11 +106,11 @@ button
 			+btn($grey-d, $white, $m-rad, $grey-d)
 	// filled
 	&.w-filled-btn
-		+btn($grey-xl, $white, $m-rad)
+		+btn($grey-xl, $marine, $m-rad)
 		&:hover
 			+btn(transparent, $grey-xl, $m-rad, $grey-xl)
 		&.focus, &.active
-			+btn($grey-xl, $white, $m-rad)
+			+btn($grey, $marine, $m-rad)
 	// link-alike
 	&.w-link
 		+link-alike
