btn menu circled

--- a/src/style/_mixins.sass
+++ b/src/style/_mixins.sass
@@ -135,6 +135,8 @@
     border-radius: 6px
 =l-radius
     border-radius: 12px
+=circle
+    border-radius: 50%
 
 /* ---- Transitions ----*/
 =transition($str) // si transi sur plusieurs pptés,utiliser des ""
