--- a/src/style/_theme.sass
+++ b/src/style/_theme.sass
@@ -36,9 +36,10 @@ $error: #B72204
 $info: #031DA0
 
 // Nuances de gris
-$black: #000000
+$black: #000D1D
 $marine: #001229
-$black-trans: #00000040 // transparence 0.25
+$b-trans-d: #000D1DCC // transparence 0.8
+$b-trans-l: #000D1D40 // transparence 0.25
 $grey-xd: #2A2A2A
 $grey-d: #7E7E7E
 $grey: #C5C5C5
