adding navigation + figure 3

--- a/src/style/global.sass
+++ b/src/style/global.sass
@@ -173,7 +173,7 @@ button
 			+btn($grey-xl, $marine, $m-rad, $grey-xl)
 	// filled
 	&.w-filled-btn
-		+btn($white, transparent, $m-rad)
+		+btn($white, $marine, $m-rad)
 		&:hover
 			+btn(transparent, $white, $m-rad, $white)
 		&.focus, &.active
