adding previous n next btns in footer + few more things

--- a/src/style/global.sass
+++ b/src/style/global.sass
@@ -181,3 +181,13 @@ button
 
 .circle
 	+circle
+
+// TEEEMPORRARY
+
+.soon
+	color: $white
+	font-style: italic
+	position: absolute
+	top: 50%
+	left: 50%
+	transform: translate(-50%,-50%)
